--- a/5_flask/todo/templates/index.html
+++ b/5_flask/todo/templates/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>{{ config.SITE_NAME }}</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
   </head>
 <body>
   <h1>{{ config.SITE_NAME }}</h1>
