--- a/5_flask/todo/templates/task_list.html
+++ b/5_flask/todo/templates/task_list.html
@@ -1,15 +1,45 @@
 <html>
   <head>
     <title>{{ config.SITE_NAME }}</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
     <h1>{{ config.SITE_NAME }}</h1>
 
     <ol>
       {% for task in tasks %}
-        <li>{{task.description}} - <em>{{ task.added_at }}</em></li>
+        <li>
+          {% if task.done %}
+          <span class="done">{{ task.description }} – <em>{{ task.added_at }}</em></span>
+          {% else %}
+            {{task.description}} - <em>{{ task.added_at }}</em>
+          {% endif %}
+
+          {% if not task.done %}
+            <form method="POST" action="/done">
+              <input type="hidden" name="id" value="{{ task.id }}"/>
+              <button type="submit">Done</button>
+            </form>
+          {% endif %}
+        </li>
       {% endfor %}
     </ol>
     <p><a href="{{ url_for('index') }}">Home</a></p>
+
+    <form class="add-form" method="POST" action="{{ url_for('tasks') }}">
+      <input name="task" value=""/>
+      <button type="submit">Add</button>
+    </form>
+
+    <p>
+      {% if error %}
+        <strong class="error">Error: {{ error }}</strong>
+      {% endif %}
+
+      {% for message in get_flashed_messages() %}
+        <strong class="success">{{ message }}</strong>
+      {% endfor %}
+    </p>
+
   </body>
 </html>
